--- a/env/pyvenv.cfg
+++ b/env/pyvenv.cfg
@@ -1,5 +1,5 @@
 home = C:\Users\HP\AppData\Local\Microsoft\WindowsApps\PythonSoftwareFoundation.Python.3.12_qbz5n2kfra8p0
 include-system-site-packages = false
-version = 3.12.5
+version = 3.12.6
 executable = C:\Users\HP\AppData\Local\Microsoft\WindowsApps\PythonSoftwareFoundation.Python.3.12_qbz5n2kfra8p0\python.exe
-command = C:\Users\HP\AppData\Local\Microsoft\WindowsApps\PythonSoftwareFoundation.Python.3.12_qbz5n2kfra8p0\python.exe -m venv C:\Users\HP\Desktop\JOY\SEM3\mental-health-tracker\env
+command = C:\Users\HP\AppData\Local\Microsoft\WindowsApps\PythonSoftwareFoundation.Python.3.12_qbz5n2kfra8p0\python.exe -m venv C:\Users\HP\Desktop\mental-health-tracker\env
